--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" language="javascript" src="login/login.nocache.js"></script>      -->
   </head>
   <body>
-
+  <div id="frame">
   <form id="form" name="form" action="#" method="post">
       <div id="block">
           <label id="user" for="name">p</label>
@@ -22,6 +22,7 @@
   <div id="option">
       <p>Chat KATA</p>
      <!-- <a href="#">forgot?</a> -->
+  </div>
   </div>
   </body>
 </html>
