--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,20 +9,22 @@
     <script type="text/javascript" language="javascript" src="login/login.nocache.js"></script>      -->
   </head>
   <body>
-  <div id="frame">
   <form id="form" name="form" action="#" method="post">
       <div id="block">
           <label id="user" for="name">p</label>
-          <input type="text" name="name" id="name" placeholder="Username" oninvalid="setCustomValidity('Custom Message')" required />
+          <input type="text" name="name" id="name" placeholder="Username" oninvalid="setCustomValidity('Oops')" required/>
           <label id="pass" for="password">k</label>
-          <input type="password" name="password" id="password" placeholder="Password" oninvalid="setCustomValidity('Custom Message')" required />
+          <input type="password" name="password" id="password" placeholder="Password" oninvalid="setCustomValidity('Oops')" required />
           <input type="submit" id="submit" name="submit" value="a"/>
       </div>
   </form>
   <div id="option">
-      <p>Chat KATA</p>
-     <!-- <a href="#">forgot?</a> -->
+      <!--<img src="mascota3.png"  height="119" width="112"> -->
+      <p>CHAT KATA</p>
+      <!-- <a href="#">forgot?</a> -->
   </div>
-  </div>
+  <footer id="div_img">
+      <img src="imgs/bottom.png">
+  </footer>
   </body>
 </html>
