--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -24,7 +24,7 @@
       <!-- <a href="#">forgot?</a> -->
   </div>
   <footer id="div_img">
-      <img src="imgs/bottom.png">
+      <img id="img" src="imgs/bottom.png">
   </footer>
   </body>
 </html>
