--- a/src/main/webapp/chat.html
+++ b/src/main/webapp/chat.html
@@ -8,11 +8,22 @@
 <body>
 
 
-    <head>
+    <header>
         <p>CHAT KATA</p>
-    </head>
-    <input type="text" id="msg_field" />
-    <input type="submit" id="submit" name="submit" value="a"/>
+    </header>
+    <nav>
+    </nav>
+    <aside>
+    <!-- Columna para usuarios conectados -->
+    </aside>
+    <section>
+
+    </section>
+    <footer>
+        <input type="text" id="msg_field" />
+        <input type="submit" id="submit" name="submit" value="a"/>
+    </footer>
+
 
 </body>
 </html>
